--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -7,3 +7,10 @@ admin:
   acces-denied: You shall not pass!
   ban-help: А кого банить то?
   user-banned: Баним ${user.first_name}...
+report:
+  done: Мы примем все необходимые меры, спасибо.
+  help: А кого репортим?
+  notification: |
+    Андрюха, у нас спам! Возможно, флуд. По коням! 🏇
+
+    Чат: "<b>${chat.title}</b>"
