--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -13,3 +13,5 @@ report:
   done: Мы примем все необходимые меры, спасибо.
   help: А кого репортим?
   notification: Андрюха, в чате "<b>${chat.title}</b>" спам! Возможно, флуд. По коням! 🏇
+utils:
+  help: Lorem ipsum
