Handle function word Fix #FSM message text

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -15,6 +15,10 @@ report:
   notification: Андрюха, в чате "<b>${chat.title}</b>" спам! Возможно, флуд. По коням! 🏇
 utils:
   help: Lorem ipsum
+  func: |
+    Разрешите докопаться 👮
+    Вероятно, вы хотели написать <i>функциональность</i>, а не <i>функционал</i> ☝
+    http://telegra.ph/Function-06-01
 supergroup:
   welcome: Привет!
 self-ban: |
