added meta questions mark

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -13,6 +13,11 @@ report:
   done: Мы примем все необходимые меры, спасибо.
   help: А кого репортим?
   notification: Андрюха, в чате "<b>${chat.title}</b>" спам! Возможно, флуд. По коням! 🏇
+meta:
+  done: |
+    Пожалуйста, не задавайте мета-вопросов в чате!
+    Мета-вопрос - это вопрос, который подразумевает другие вопросы.
+    http://nometa.xyz/
 utils:
   help: Lorem ipsum
   func: |
