add message link to report

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -12,7 +12,7 @@ admin:
 report:
   done: Мы примем все необходимые меры, спасибо.
   help: А кого репортим?
-  notification: Андрюха, в чате "<b>${chat.title}</b>" спам! Возможно, флуд. По коням! 🏇
+  notification: Андрюха, в чате "${chat_link}" спам! Возможно, флуд. По коням! 🏇
 meta:
   done: |
     Пожалуйста, не задавайте мета-вопросов в чате!
@@ -24,6 +24,7 @@ utils:
     Разрешите докопаться 👮
     Вероятно, вы хотели написать <i>функциональность</i>, а не <i>функционал</i> ☝
     http://telegra.ph/Function-06-01
+  link: <a href="${link}">${title}</a>
 supergroup:
   welcome: Привет!
 self-ban: |
